# ghosd

./: README.asciidoc  USAGE.asciidoc  config.h  ghosd.c  helper.c  meson.build
doc/: CHANGELOG.asciidoc  USAGE.asciidoc  ghosd.1  ghosd.1.asciidoc
src/: common.h  draw.c  draw.h  ghosd.c  ghosd.h  helper.c  helper.h
